# RingOA-dev

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py
FssWM/: CMakeLists.txt
FssWM/fm_index/: CMakeLists.txt  fssfmi.cpp  fssfmi.h  sotfmi.cpp  zero_test.cpp  zero_test.h
FssWM/fss/: CMakeLists.txt  dcf_eval.cpp  dcf_gen.cpp  dcf_key.cpp  dpf_eval.cpp  dpf_eval.h  dpf_eval.hpp  dpf_gen.cpp  dpf_gen.h  dpf_gen.hpp  dpf_key.cpp  dpf_key.h  dpf_key.hpp  fss.cpp  fss.h  fss.hpp  libPSI_dpf_eval.cpp  libPSI_dpf_eval.h  libPSI_dpf_gen.cpp  libPSI_dpf_gen.h  prg.cpp  prg.h  prg.hpp
FssWM/protocol/: CMakeLists.txt  ddcf.cpp  ddcf.h  integer_comparison.h  mixed_obliv_select.cpp  mixed_obliv_select.h  obliv_select.h  ringoa.cpp  ringoa.h  shared_ot.cpp  shared_ot.h  zero_test.h
FssWM/sharing/: CMakeLists.txt  additive_2p.cpp  additive_2p.h  additive_3p.cpp  additive_3p.h  beaver_triples.cpp  beaver_triples.h  binary_2p.cpp  binary_2p.h  binary_3p.cpp  binary_3p.h  rep_share.cpp  rep_share.h  share3_types.cpp  share3_types.h  share_io.h
FssWM/utils/: CMakeLists.txt  block.cpp  block.h  file_io.cpp  file_io.h  file_io.hpp  format_types.h  logger.cpp  logger.h  logger.hpp  network.cpp  network.h  rng.h  rng.hpp  timer.cpp  timer.h  timer.hpp  to_string.h  utils.cpp  utils.h  utils.hpp  utils_test.cpp
FssWM/wm/: CMakeLists.txt  bit_vector.cpp  bit_vector.h  ddcf.cpp  ddcf.h  fmindex.cpp  fmindex.h  fsswm.cpp  fsswm.h  key_io.h  mixed_obliv_select.cpp  mixed_obliv_select.h  obliv_select.cpp  obliv_select.h  plain_wm.cpp  plain_wm.h  sotwm.cpp  sotwm.h  wavelet_matrix.cpp  wavelet_matrix.h  wm.h  zero_test.cpp  zero_test.h
FssWM_Bench/: CMakeLists.txt  bench_main.cpp  dpf_bench.cpp  dpf_bench.h  fssfmi_bench.cpp  fssfmi_bench.h  obliv_select_bench.cpp  obliv_select_bench.h
FssWM_Tests/: CMakeLists.txt  dpf_test.cpp  dpf_test.hpp  main.cpp  prg_test.cpp  prg_test.hpp  test_main.cpp  timer_test.cpp
FssWM_Tests/fm_index/: fssfmi_test.cpp  fssfmi_test.h  zt_test.cpp  zt_test.h
FssWM_Tests/fss/: dcf_test.cpp  dpf_test.cpp  dpf_test.h  libPSI_dpf_test.cpp  libPSI_dpf_test.h  prg_test.cpp
FssWM_Tests/protocol/: ddcf_test.cpp  ddcf_test.h  equality_test.h  integer_comparison_test.cpp  obliv_access_test.cpp  obliv_access_test.h  obliv_select_test.cpp  obliv_select_test.h  zt_test.cpp  zt_test.h
FssWM_Tests/sharing/: additive_2p_test.cpp  additive_3p_test.cpp  additive_3p_test.h  additive_test.cpp  additive_test.h  binary_2p_test.cpp  binary_2p_test.h  binary_3p_test.cpp  binary_3p_test.h
FssWM_Tests/utils/: file_io_test.cpp  network_test.cpp  network_test.h  timer_test.cpp  utils_test.cpp
FssWM_Tests/wm/: ddcf_test.cpp  fsswm_test.cpp  fsswm_test.h  obliv_select_test.cpp  obliv_select_test.h  wm_test.cpp  wm_test.h  zt_test.cpp  zt_test.h
RingOA/: CMakeLists.txt
RingOA/fm_index/: CMakeLists.txt  fssfmi.cpp  fssfmi.h  ofmi.cpp  ofmi.h  ofmi_fsc.cpp  ofmi_fsc.h  secure_fmi.cpp  secure_fmi.h  sotfmi.cpp  sotfmi.h
RingOA/fss/: CMakeLists.txt  dcf_eval.cpp  dcf_eval.h  dcf_gen.cpp  dcf_gen.h  dcf_key.cpp  dcf_key.h  dpf_eval.cpp  dpf_eval.h  dpf_gen.cpp  dpf_gen.h  dpf_key.cpp  dpf_key.h  fss.cpp  fss.h  prg.cpp  prg.h
RingOA/protocol/: CMakeLists.txt  ddcf.cpp  ddcf.h  dpf_pir.cpp  dpf_pir.h  equality.cpp  equality.h  integer_comparison.cpp  integer_comparison.h  key_io.h  min3.cpp  min3.h  obliv_select.cpp  obliv_select.h  ringoa.cpp  ringoa.h  ringoa_fsc.cpp  ringoa_fsc.h  shared_ot.cpp  shared_ot.h  zero_test.cpp  zero_test.h
RingOA/sharing/: CMakeLists.txt  additive_2p.cpp  additive_2p.h  additive_3p.cpp  additive_3p.h  beaver_triples.h  binary_2p.cpp  binary_2p.h  binary_3p.cpp  binary_3p.h  rep_share.h  share_io.h  share_types.h
RingOA/utils/: CMakeLists.txt  block.h  file_io.h  format_types.h  logger.cpp  logger.h  network.cpp  network.h  rng.h  seq_io.h  timer.cpp  timer.h  utils.h
RingOA/wm/: CMakeLists.txt  fsswm.cpp  fsswm.h  oquantile.cpp  oquantile.h  oquantile_fsc.cpp  oquantile_fsc.h  owm.cpp  owm.h  owm_fsc.cpp  owm_fsc.h  plain_wm.cpp  plain_wm.h  sotwm.cpp  sotwm.h
RingOA_Bench/: CMakeLists.txt  bench_common.h  bench_main.cpp  dpf_bench.cpp  dpf_bench.h  dpf_pir_bench.cpp  dpf_pir_bench.h  obliv_access_bench.cpp  obliv_access_bench.h  obliv_select_bench.cpp  obliv_select_bench.h  ofmi_bench.cpp  ofmi_bench.h  oquantile_bench.cpp  oquantile_bench.h  ringoa_bench.cpp  ringoa_bench.h  secure_fmi_bench.cpp  secure_fmi_bench.h  shared_ot_bench.cpp  shared_ot_bench.h  sotfmi_bench.cpp  sotfmi_bench.h
RingOA_Tests/: CMakeLists.txt  test_main.cpp
RingOA_Tests/fm_index/: fssfmi_test.h  ofmi_test.cpp  ofmi_test.h  secure_fmi_test.cpp  secure_fmi_test.h
RingOA_Tests/fss/: dcf_test.cpp  dcf_test.h  dpf_test.cpp  dpf_test.h  prg_test.cpp
RingOA_Tests/protocol/: ddcf_test.cpp  dpf_pir_test.cpp  dpf_pir_test.h  equality_test.cpp  equality_test.h  integer_comparison_test.cpp  integer_comparison_test.h  min3_test.cpp  min3_test.h  obliv_access_test.cpp  obliv_access_test.h  obliv_select_test.cpp  obliv_select_test.h  ringoa_test.cpp  ringoa_test.h  shared_ot_test.cpp  shared_ot_test.h  zt_test.cpp  zt_test.h
RingOA_Tests/sharing/: additive_2p_test.cpp  additive_2p_test.h  additive_3p_test.cpp  additive_3p_test.h  binary_2p_test.cpp  binary_2p_test.h  binary_3p_test.cpp  binary_3p_test.h
RingOA_Tests/utils/: file_io_test.h  network_test.cpp  timer_test.cpp  timer_test.h  utils_test.cpp  utils_test.h
RingOA_Tests/wm/: oquantile_test.cpp  oquantile_test.h  owm_test.cpp  owm_test.h  secure_wm_test.cpp  secure_wm_test.h  wm_test.cpp  wm_test.h
cmake/: RingOAConfig.cmake.in
